--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,54 +3,63 @@
 <head>
   <meta charset="UTF-8">
   <title>EcoPlay Critics - Login</title>
-  <link rel="stylesheet" href="login.css">
+
+  <link rel="stylesheet" href="css/login.css">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <!-- NAVBAR -->
+  <!-- ===== HEADER / NAVBAR ===== -->
   <header class="navbar">
-    <div class="logo">
-      <span>EcoPlay <strong>Critics</strong></span>
+    <div class="brand">
+      <img src="img/logo.png" alt="EcoPlay Critics" class="logo-img">
     </div>
 
-    <nav>
-      <a href="#">Jogos</a>
+    <nav class="navlinks">
+      <a href="jogos.html">Jogos</a>
       <span>|</span>
-      <a href="#">Sobre Nós</a>
+      <a href="sobre.html">Sobre Nós</a>
       <span>|</span>
-      <a href="#">Ajuda</a>
+      <a href="ajuda.html">Ajuda</a>
     </nav>
 
-    <div class="search-login">
-      <input type="text" placeholder="Procurar">
-      <button class="login-btn">Login</button>
+    <div class="navright">
+      <div class="searchwrap">
+        <input type="text" placeholder="Procurar">
+        <span class="search-icon">🔍</span>
+      </div>
+
+      <a href="login.html" class="login-btn">Login</a>
     </div>
   </header>
 
-  <!-- LOGIN -->
-  <main class="container">
-    <h1>Login</h1>
-    <hr>
+  <!-- ===== CONTEÚDO ===== -->
+  <main class="main">
+    <div class="card">
+      <h1>Login</h1>
+      <div class="divider"></div>
 
-    <form class="form-login" id="loginForm">
-      <input type="email" placeholder="Email" id="email" required>
-      <input type="password" placeholder="Senha" id="password" required>
+      <form class="form-login" id="loginForm">
+        <input type="email" id="email" placeholder="Email" required>
+        <input type="password" id="password" placeholder="Senha" required>
 
-      <div class="options">
-        <label>
-          <input type="checkbox"> Mantenha-me conectado
-        </label>
-      </div>
+        <div class="options">
+          <label class="keep">
+            <input type="checkbox">
+            <span>Mantenha-me conectado</span>
+          </label>
+        </div>
 
-      <p>
-        Não tem uma conta? <a href="cadastro.html">Cadastre-se!</a><br>
-        <a href="#">Esqueci minha senha!</a>
-      </p>
+        <p class="links">
+          Não tem uma conta? <a href="cadastro.html">Cadastre-se!</a><br>
+          <a href="forgot.html">Esqueci minha senha!</a>
+        </p>
 
-      <button type="submit">Login</button>
-    </form>
+        <button type="submit">Login</button>
+      </form>
+    </div>
   </main>
 
-  <script src="login.js"></script>
+  <script src="js/login.js"></script>
 </body>
 </html>
