agr vamo ver os jogos (AAAAAAAA)

--- a/frontend/jogos.html
+++ b/frontend/jogos.html
@@ -39,53 +39,114 @@
   </header>
 
   <p id="noResults" style="display:none; text-align:center; margin-top:20px;">
-  Nenhum jogo encontrado.
-</p>
+    Nenhum jogo encontrado.
+  </p>
 
   <!-- ===== CONTEÚDO ===== -->
   <main class="content">
 
     <h2>Todos os Jogos</h2>
 
-<div class="games-wrap">
-  <div class="games-row" id="row-all">
-    <div class="game add">+</div>
+    <div class="games-wrap">
+      <button class="arrow left" data-target="row-all" data-dir="-1">‹</button>
 
-    <div class="game" data-name="Beyond Blue"><img src="img/beyond-blue.jpg" alt="Beyond Blue"></div>
-    <div class="game" data-name="Plasticity"><img src="img/plasticity.jpg" alt="Plasticity"></div>
-    <div class="game" data-name="Terra Nil"><img src="img/terra-nil.jpg" alt="Terra Nil"></div>
-    <div class="game" data-name="Alba"><img src="img/alba.jpg" alt="Alba"></div>
-    <div class="game" data-name="Endling"><img src="img/endling.jpg" alt="Endling"></div>
-    <div class="game" data-name="Seeds of Resilience"><img src="img/seeds.jpg" alt="Seeds of Resilience"></div>
-    <div class="game" data-name="Eco"><img src="img/eco.jpg" alt="Eco"></div>
-    <div class="game" data-name="Fate of the World"><img src="img/fate-of-the-world.jpg" alt="Fate of the World"></div>
-    <div class="game" data-name="Lumino City"><img src="img/lumino-city.jpg" alt="Lumino City"></div>
-  </div>
+      <div class="games-row" id="row-all">
+        <div class="game add">+</div>
 
-  <button class="arrow" type="button" data-target="row-all">›</button>
-</div>
+        <a class="game" data-name="Beyond Blue" href="jogo.html?id=beyond-blue">
+          <img src="img/beyond-blue.jpg" alt="Beyond Blue">
+        </a>
+
+        <a class="game" data-name="Plasticity" href="jogo.html?id=plasticity">
+          <img src="img/plasticity.jpg" alt="Plasticity">
+        </a>
+
+        <a class="game" data-name="Terra Nil" href="jogo.html?id=terra-nil">
+          <img src="img/terra-nil.jpg" alt="Terra Nil">
+        </a>
+
+        <a class="game" data-name="Alba" href="jogo.html?id=alba">
+          <img src="img/alba.jpg" alt="Alba">
+        </a>
+
+        <a class="game" data-name="Endling" href="jogo.html?id=endling">
+          <img src="img/endling.jpg" alt="Endling">
+        </a>
+
+        <a class="game" data-name="Seeds of Resilience" href="jogo.html?id=seeds-of-resilience">
+          <img src="img/seeds.jpg" alt="Seeds of Resilience">
+        </a>
+
+        <a class="game" data-name="Eco" href="jogo.html?id=eco">
+          <img src="img/eco.jpg" alt="Eco">
+        </a>
+
+        <a class="game" data-name="Fate of the World" href="jogo.html?id=fate-of-the-world">
+          <img src="img/fate-of-the-world.jpg" alt="Fate of the World">
+        </a>
+
+        <a class="game" data-name="Lumino City" href="jogo.html?id=lumino-city">
+          <img src="img/lumino-city.jpg" alt="Lumino City">
+        </a>
+      </div>
+
+      <button class="arrow" type="button" data-target="row-all">›</button>
+    </div>
 
     <h2>Mais Recente</h2>
 
-<div class="games-wrap">
-  <div class="games-row" id="row-recent">
-    <div class="game" data-name="Endling"><img src="img/endling.jpg" alt="Endling"></div>
-    <div class="game" data-name="Terra Nil"><img src="img/terra-nil.jpg" alt="Terra Nil"></div>
-    <div class="game" data-name="Alba"><img src="img/alba.jpg" alt="Alba"></div>
-    <div class="game" data-name="Plasticity"><img src="img/plasticity.jpg" alt="Plasticity"></div>
-    <div class="game" data-name="Beyond Blue"><img src="img/beyond-blue.jpg" alt="Beyond Blue"></div>
-    <div class="game" data-name="Seeds of Resilience"><img src="img/seeds.jpg" alt="Seeds of Resilience"></div>
-    <div class="game" data-name="Flower"><img src="img/flower.jpg" alt="Flower"></div>
-    <div class="game" data-name="Eco"><img src="img/eco.jpg" alt="Eco"></div>
-    <div class="game" data-name="Fate of the World"><img src="img/fate-of-the-world.jpg" alt="Fate of the World"></div>
-    <div class="game" data-name="Lumino City"><img src="img/lumino-city.jpg" alt="Lumino City"></div>
-  </div>
+    <div class="games-wrap">
+      <button class="arrow left" data-target="row-recent" data-dir="-1">‹</button>
 
-  <button class="arrow" type="button" data-target="row-recent">›</button>
-</div>
+      <div class="games-row" id="row-recent">
+
+        <a class="game" data-name="Endling" href="jogo.html?id=endling">
+          <img src="img/endling.jpg" alt="Endling">
+        </a>
+
+        <a class="game" data-name="Terra Nil" href="jogo.html?id=terra-nil">
+          <img src="img/terra-nil.jpg" alt="Terra Nil">
+        </a>
+
+        <a class="game" data-name="Alba" href="jogo.html?id=alba">
+          <img src="img/alba.jpg" alt="Alba">
+        </a>
+
+        <a class="game" data-name="Plasticity" href="jogo.html?id=plasticity">
+          <img src="img/plasticity.jpg" alt="Plasticity">
+        </a>
+
+        <a class="game" data-name="Beyond Blue" href="jogo.html?id=beyond-blue">
+          <img src="img/beyond-blue.jpg" alt="Beyond Blue">
+        </a>
+
+        <a class="game" data-name="Seeds of Resilience" href="jogo.html?id=seeds-of-resilience">
+          <img src="img/seeds.jpg" alt="Seeds of Resilience">
+        </a>
+
+        <a class="game" data-name="Flower" href="jogo.html?id=flower">
+          <img src="img/flower.jpg" alt="Flower">
+        </a>
+
+        <a class="game" data-name="Eco" href="jogo.html?id=eco">
+          <img src="img/eco.jpg" alt="Eco">
+        </a>
+
+        <a class="game" data-name="Fate of the World" href="jogo.html?id=fate-of-the-world">
+          <img src="img/fate-of-the-world.jpg" alt="Fate of the World">
+        </a>
+
+        <a class="game" data-name="Lumino City" href="jogo.html?id=lumino-city">
+          <img src="img/lumino-city.jpg" alt="Lumino City">
+        </a>
+
+      </div>
+
+      <button class="arrow" type="button" data-target="row-recent">›</button>
+    </div>
 
   </main>
 
-    <script src="js/jogos.js"></script>
+  <script src="js/jogos.js"></script>
 </body>
 </html>
